charon/tests/ui/find-sized-clause.out
thread 'rustc' panicked at src/bin/charon-driver/translate/translate_predicates.rs:578:13:
internal error: entered unreachable code: Could not find a clause for parameter:
- target param: TraitRef { def_id: core::marker::Sized, generic_args: [Type(Param(ParamTy { index: 0, name: "T" }))] }
- available clauses:

- context: test_crate::{impl#0}
note: run with `RUST_BACKTRACE=1` environment variable to display a backtrace
error: Thread panicked when extracting item `test_crate::{impl#0}`.
 --> tests/ui/find-sized-clause.rs:5:1
  |
5 | impl<T> Trait for Option<T> {}
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^

thread 'rustc' panicked at src/bin/charon-driver/translate/translate_crate_to_ullbc.rs:284:25:
Thread panicked when extracting item `test_crate::{impl#0}`.
error: aborting due to 1 previous error

Error: Charon driver exited with code 101
